terraform/nat.tf
resource "aws_eip" "nat" {
  vpc = true

  tags = merge(
    local.common_tags,
    {
      Name = "nat"
    }
  )
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_us_east_1a.id

  tags = merge(
    local.common_tags,
    {
      Name = "nat"
    }
  )

  depends_on = [aws_internet_gateway.igw]
}
